# hackathon-2026-ai-tutor

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_GUIDELINES.md  README.md  docker-compose.yaml  pyproject.toml  test_openai_embedder.py  test_vector_search.py
app/api/routes/: health.py
app/core/: exceptions.py
app/services/: ai_service.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  tutor.ts
frontend/src/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  QuestionCard.tsx  QuestionReference.tsx  Sidebar.tsx  TypingIndicator.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: chat.ts
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: ai.py
src/database/: db_types.py  mongo_db_io.py
src/graphs/: __init__.py  state.py
src/graphs/main/: __init__.py  agent.py
src/graphs/retrieval/: __init__.py  articles_agent.py  questions_agent.py
src/graphs/tools/: __init__.py  route_to_retrieval.py  send_message.py  show_questions.py  wait_for_input.py
src/graphs/utils/: __init__.py  graph_runner.py  messages.py
src/interface/: types.ts
src/llms/: __init__.py  gemini_client.py
src/models/: schemas.py
src/retrieval/: embedding_generation.py
tests/: conftest.py
tests/test_api/: test_health.py
